--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,15 +1,11 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/Estela_DB?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=lordthankU22-
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 server.port=8080
